# agentic-flow

./: .env.example  AURELIA-IMPLEMENTATION-SUMMARY.md  AURELIA-MVD-QUICKSTART.md  CAPITAL-ONE-QUICK-START.md  INDUSTRY_VALIDATION_SUMMARY.md  MATH-FRAMEWORK-SUMMARY.md  README-MATH-FRAMEWORK.md  README.md  package.json  tsconfig.json
.memory/: sequences-coordination.json
aurelia_standalone/: Cargo.toml
aurelia_standalone/crates/backtesting/: Cargo.toml  README.md
aurelia_standalone/crates/backtesting/examples/: simple_backtest.rs
aurelia_standalone/crates/backtesting/src/: lib.rs
aurelia_standalone/crates/backtesting/tests/: integration_test.rs
aurelia_standalone/crates/cosmos-physics/: Cargo.toml
aurelia_standalone/crates/cosmos-physics/src/: lib.rs
aurelia_standalone/crates/holographic-memory/: Cargo.toml
aurelia_standalone/crates/holographic-memory/src/: lib.rs  phi_game_theory.rs
aurelia_standalone/crates/macro-field/: Cargo.toml  README.md
aurelia_standalone/crates/macro-field/docs/: ADR-001-FIELD-MODEL.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  TECHNOLOGY_EVALUATION.md  USAGE.md
aurelia_standalone/crates/macro-field/src/: field_state.rs  fred_client.rs  game_theory.rs  influence.rs  lib.rs
aurelia_standalone/crates/phi-core/: Cargo.toml
aurelia_standalone/crates/phi-core/src/: constants.rs  cordic.rs  latent_n.rs  lib.rs  retrocausal_goap.rs
aurelia_standalone/crates/webull-integration/: .env.example  Cargo.toml
aurelia_standalone/crates/webull-integration/examples/: basic_usage.rs
aurelia_standalone/crates/webull-integration/src/: auth.rs  co_trading.rs  latency.rs  lib.rs  market_data.rs  orders.rs  positions.rs  types.rs
aurelia_standalone/crates/webull-integration/tests/: integration_test.rs
capital-one-poc/: Cargo.toml  README.md
capital-one-poc/crates/phi-cli/: Cargo.toml  README.md  TUI_USAGE.md
capital-one-poc/crates/phi-cli/src/: app.rs  events.rs  lib.rs  main.rs  ui.rs
capital-one-poc/crates/phi-cli/src/commands/: mod.rs
capital-one-poc/crates/phi-cli/src/components/: button.rs  help.rs  mod.rs
capital-one-poc/crates/phi-memory/: Cargo.toml
capital-one-poc/crates/phi-memory/benches/: memory_bench.rs
capital-one-poc/crates/phi-memory/src/: lib.rs
capital-one-poc/crates/phi-runtime/: Cargo.toml
capital-one-poc/crates/phi-runtime/benches/: runtime_bench.rs
capital-one-poc/crates/phi-runtime/src/: lib.rs
capital-one-poc/crates/phi-wasm/: Cargo.toml
capital-one-poc/crates/phi-wasm/src/: lib.rs
capital-one-poc/docker/: .dockerignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  healthcheck.sh  swarm-init.sh  swarm-stack.yml
capital-one-poc/docker/configs/: grafana-datasources.yml  init.sql  nginx.conf  prometheus.yml
capital-one-poc/examples/: basic_runtime.rs  full_system.rs  memory_operations.rs  wasm_demo.rs
config/: aurelia-batch-schedule.json
crates/math-framework-wasm/: .gitignore  Cargo.toml  README.md  SUMMARY.md  build.sh  package.json  types.d.ts
crates/math-framework-wasm/examples/: nodejs-example.js  web-example.html
crates/math-framework-wasm/src/: decomposition.rs  divergence.rs  lib.rs  sequences.rs
curriculum/: README.md  assessment-rubrics.md  lesson-plans.md  music-production-curriculum.json
docs/: AGENTDB_DEVELOPER_QUICK_REFERENCE.md  AGENTDB_OS_LEVEL_ANALYSIS.md  AGENTDB_TAURI_OS_EXECUTIVE_SUMMARY.md  API.md  ARCHITECTURE.md  ARXIV-PAPER-ARCHITECTURE-SUMMARY.md  AUDIT_REPORT.md  AURELIA-ARCHITECTURE.md  AURELIA-COMPLETE-SYSTEM-SUMMARY.md  AURELIA-MATHEMATICAL-MASTERY.md  AURELIA-MVD-INTEGRATION.md  AURELIA-MVD-SUMMARY.md  AURELIA-POC-SUMMARY.md  AURELIA-QUICKSTART.md  AURELIA-STATUS-REPORT.md  BEHREND-KIMBERLING-IMPLEMENTATION.md  CAPITAL-ONE-IMPLEMENTATION-DECK.md  CAPITAL-ONE-POC-SUMMARY.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  CONTRIBUTING.md  COSMOS-INTEGRATION.md  EXAMPLES.md  HOLOGRAPHIC-INTERFACE-DESIGN.md  IMPLEMENTATION-SUMMARY-AGENTDB.md  NASH-SOLVER-IMPLEMENTATION.md  OEIS-MCP-TOOLS-COMPLETION.md  PRODUCTION_VALIDATION_REPORT.md  README.md  SWARM-IMPLEMENTATION-COMPLETE.md  TAURI-OS-PROMPT.md  TAURI_ANTHROPIC_GUIDE.md  THEOREMS.md  THEORY.md  arxiv-abstract-intro.md  arxiv-paper-structure.json  arxiv-paper-structure.md  arxiv-paper-template.tex  arxiv-section-4-physical-interpretation.md  arxiv-section-6-experimental-predictions.md  aurelia-integration-examples.md  (+26 more)
examples/: README.md  aurelia-learning-demo.ts  aurelia-mvd-server.ts  aurelia-quickstart.ts  bk-theorem-quickstart.ts  holographic-desktop-demo.ts  math-framework-api-demo.ts  oeis-tools-demo.ts  phase-space-demo.ts  q-network-demo.ts  swarm-demo.ts  tauri-anthropic-development.md  tensor-nlp-demo.ts  zeckendorf-minimal-golf.ts
leviathan_aurelia/: LEVIATHAN-AURELIA-SUMMARY.md  README.md
scripts/: aurelia-batch-execute.sh  benchmark-runner.ts  verify-qnetwork.js  (+14 more)
tauri-anthropic-app/docs/security-configs/: Cargo.toml  audit.toml  deny.toml  github-security.yml  security-tests.rs  tauri.conf.json
tauri-anthropic-app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
tauri-anthropic-app/src-tauri/src/: aurelia_integration.rs  commands.rs  lib.rs  main.rs  overlay.rs  vision.rs
tauri-anthropic-app/src-tauri/src/anthropic/: client.rs  error.rs  mod.rs  types.rs
tauri-anthropic-app/src-tauri/src/aurelia/: commands.rs  conversation.rs  learning.rs  mod.rs
tauri-anthropic-app/src-tauri/src/commands/: chat.rs  config.rs  mod.rs
tauri-anthropic-app/src-tauri/src/keychain/: README.md  mod.rs  storage.rs
tauri-anthropic-app/src-tauri/src/phi_memory/: commands.rs  knowledge_graph.rs  ontology.rs  persistence.rs  zeckendorf.rs
tauri-anthropic-app/src-tauri/src/vision/: capture.rs  commands.rs  mapping.rs  mod.rs  ocr.rs  pipeline.rs
tauri-anthropic-app/src-tauri/src/wasm/: bridge.rs  mod.rs
tauri-anthropic-app/src-tauri/tests/: IMPLEMENTATION_SUMMARY.md  integration_test.rs  phi_memory_test.rs
tauri-anthropic-app/src-tauri/tests/integration/: tauri_commands_test.rs  wasm_integration_test.rs
tauri-anthropic-app/src-tauri/tests/unit/: anthropic_client_test.rs  keychain_test.rs
(+544 files in other folders)
