[workspace]
resolver = "2"
members = [
    "crates/phi-runtime",
    "crates/phi-memory",
    "crates/phi-wasm",
    "crates/phi-cli",
]
default-members = [
    "crates/phi-runtime",
    "crates/phi-memory",
    "crates/phi-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Capital One POC Team"]
license = "MIT"
repository = "https://github.com/qLeviathan/agentic-flow"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true

# Root package for examples
[package]
name = "capital-one-poc"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
phi-runtime = { path = "crates/phi-runtime" }
phi-memory = { path = "crates/phi-memory" }
tokio = { workspace = true }
anyhow = { workspace = true }

[[example]]
name = "basic_runtime"
path = "examples/basic_runtime.rs"

[[example]]
name = "memory_operations"
path = "examples/memory_operations.rs"

[[example]]
name = "wasm_demo"
path = "examples/wasm_demo.rs"

[[example]]
name = "full_system"
path = "examples/full_system.rs"
