[package]
name = "math-framework-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Agentic Flow Contributors"]
license = "MIT"
description = "High-performance WASM bindings for mathematical framework operations"
repository = "https://github.com/ruvnet/agentic-flow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Console logging for WASM
console_error_panic_hook = { version = "0.1", optional = true }

# Big integer support for Fibonacci
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for small WASM binary size while maintaining performance
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
