[package]
name = "backtesting"
version = "2.0.0"
edition = "2021"
description = "Enhanced backtesting framework with Fibonacci/Lucas logic and Latent-N tracking"
license = "MIT"

[dependencies]
# Core phi-arithmetic from AURELIA
phi-core = { path = "../phi-core" }
holographic-memory = { path = "../holographic-memory" }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Mathematics
num-traits = "0.2"

# Date/time handling
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
