[package]
name = "cosmos-physics"
version = "2.0.0"
edition = "2021"
description = "NVIDIA Cosmos integration for AURELIA physics simulation"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for Cosmos API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Image processing
image = "0.24"

# Video processing
opencv = { version = "0.88", features = ["clang-runtime"] }

# Python interop for Cosmos models
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Parallel processing
rayon = "1.8"

# Phi-core integration
phi-core = { path = "../phi-core" }

[dev-dependencies]
tokio-test = "0.4"
