[package]
name = "holographic-memory"
version = "2.0.0"
edition = "2021"
description = "Infinite memory compression via recursive φ-identities - NOT database, continuous compression"
license = "MIT"

[dependencies]
# Core Rust
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "WebGlRenderingContext"] }

# Parallel processing
rayon = "1.8"

# Phi-core integration
phi-core = { path = "../phi-core" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"     # Optimize for size (critical for WASM)
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"
