[package]
name = "macro-field"
version = "2.0.0"
edition = "2021"
description = "Macroeconomic φ-field model with game theory decision integration"
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }

# HTTP client for FRED API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Phi-core integration (Latent-N, CORDIC, Fibonacci)
phi-core = { path = "../phi-core" }

# Mathematics
num-traits = "0.2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[lib]
crate-type = ["cdylib", "rlib"]
