[package]
name = "phi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "phi"
path = "src/main.rs"

[[bin]]
name = "phi-tui"
path = "src/bin/tui.rs"

[lib]
name = "phi_cli"
path = "src/lib.rs"

[dependencies]
phi-runtime = { path = "../phi-runtime" }
phi-memory = { path = "../phi-memory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
ratatui = "0.27"
crossterm = "0.28"
futures = "0.3"
thiserror = "1.0"
chrono = "0.4"
unicode-width = "0.1"
