[package]
name = "phi-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
dashmap = "6.0"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "memory_bench"
harness = false
