[package]
name = "phi-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "runtime_bench"
harness = false
